--- a/package.json
+++ b/package.json
@@ -4,6 +4,14 @@
     "version": "0.0.1",
     "private": false,
     "dependencies": {
-        "express": "3.x"
+        "express": "3.x",
+
+        "jquery": "2.1.x"
+    },
+    "devDependencies": {
+        "grunt": "0.4.x",
+        "grunt-contrib-jshint": "0.6.x",
+        "grunt-contrib-watch": "0.5.x",
+        "grunt-browserify": "1.3.x"
     }
 }
