--- a/package.json
+++ b/package.json
@@ -6,12 +6,23 @@
     "dependencies": {
         "express": "3.x",
 
-        "jquery": "2.1.x"
+        "jquery": "2.1.x",
+        "browserify-shim": "3.2.x"
     },
     "devDependencies": {
         "grunt": "0.4.x",
         "grunt-contrib-jshint": "0.6.x",
         "grunt-contrib-watch": "0.5.x",
         "grunt-browserify": "1.3.x"
+    },
+
+    "browser": {
+        "svg": "public/lib/svg.min.js"
+    },
+    "browserify-shim": {
+        "svg": "global:SVG"
+    },
+    "browserify": {
+        "transform": ["browserify-shim"]
     }
 }
