add minimal menu and new game button

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "hexago",
-    "description": "hexego",
+    "description": "hexago",
     "version": "0.0.1",
     "private": false,
     "dependencies": {
