--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "express": "3.x",
 
         "jquery": "2.1.x",
-        "browserify-shim": "3.2.x"
+        "browserify-shim": "3.2.x",
+        "socket.io": "0.9.x",
+        "socket.io-browserify": "0.9.x"
     },
     "devDependencies": {
         "grunt": "0.4.x",
