--- a/package.json
+++ b/package.json
@@ -5,18 +5,20 @@
     "private": false,
     "dependencies": {
         "express": "3.x",
-        "browserify-shim": "3.2.x",
         "socket.io": "0.9.x",
         "resig-class": "0.1.x",
 
         "jquery": "2.1.x",
+        "hogan.js": "2.0.x",
         "socket.io-browserify": "0.9.x"
     },
     "devDependencies": {
         "grunt": "0.4.x",
         "grunt-contrib-jshint": "0.6.x",
         "grunt-contrib-watch": "0.5.x",
-        "grunt-browserify": "1.3.x"
+        "grunt-browserify": "1.3.x",
+        "browserify-shim": "3.2.x",
+        "browserify-hogan": "0.1.x"
     },
 
     "browser": {
@@ -26,6 +28,6 @@
         "svg": "global:SVG"
     },
     "browserify": {
-        "transform": ["browserify-shim"]
+        "transform": ["browserify-hogan", "browserify-shim"]
     }
 }
